--- a/public/index.jade
+++ b/public/index.jade
@@ -6,8 +6,8 @@ html
         title FEWD | Course Mgmt
     body
         h1 FEWD Course Mgmt
-        form#github-user
-            input(type='text', name='username')
-            input(type='submit')
-        #github-user-info
+        //- form#github-user
+        //-     input(type='text', name='username')
+        //-     input(type='submit')
+        #app
         script(src='js/build/bundle.js')
