implement CSS/bootstrap loaders

--- a/public/index.jade
+++ b/public/index.jade
@@ -5,9 +5,10 @@ html
         meta(name='viewport', content='width=device-width, initial-scale=1')
         title FEWD | Course Mgmt
     body
-        h1 FEWD Course Mgmt
-        //- form#github-user
-        //-     input(type='text', name='username')
-        //-     input(type='submit')
-        #app
+        .container
+            h1.text-center FEWD Course Mgmt
+            //- form#github-user
+            //-     input(type='text', name='username')
+            //-     input(type='submit')
+            #app
         script(src='js/build/bundle.js')
