new routes; landing component; github auth; autocomplete

--- a/public/class-mgmt.jade
+++ b/public/class-mgmt.jade
@@ -6,5 +6,6 @@ html
         title FEWD | Course Mgmt
     body
         .container
+            h1.text-center FEWD Course Mgmt
             #app
         script(src='js/build/bundle.js')
