--- a/views/classes.jade
+++ b/views/classes.jade
@@ -3,7 +3,7 @@ html
     head
         meta(charset='utf-8')
         meta(name='viewport', content='width=device-width, initial-scale=1')
-        title FEWD | Course Mgmt
+        title Course Mgmt
     body
         .container
             #app
