--- a/views/index.jade
+++ b/views/index.jade
@@ -6,5 +6,12 @@ html
         title Course Mgmt
     body
         .container
-            #app
+            .app
         script(src='js/build/bundle.js')
+        script.
+            var el = document.querySelector('.app')
+
+            app({
+                element: el,
+                app: "#{data.app}"
+            })
