--- a/course_mgmt/templates/index.jade
+++ b/course_mgmt/templates/index.jade
@@ -6,7 +6,7 @@ html
         title Course Mgmt
     body
         .app
-        script(src='/static/js/build/bundle.js')
+        script(src='/static/bundle.js')
         script.
             var el = document.querySelector('.app')
 
